--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    background: #bff;
+    background:;#bff
     color: #002868;
     min-height: 100vh;
   }
@@ -270,7 +270,7 @@ The Handsome Scientist
 🥇 <strong>Winner of School Profile Liberia General Science Quiz Bowl 2024</strong><br>
 🎓 <strong>Award Recipient of Educate the Next Generation (ETN) 2024</strong><br>
 🌌 <strong>Co-Founder of the Liberian Astronomical Society</strong><br><br>
-Hello! I am Sadayah Isaac Davis, a quizzer and lifelong learner from Liberia. I graduated from the College of West Africa United Methodist School System.
+Hello! I am Sadayah Isaac Davis, a student and lifelong learner from Liberia. I graduated from the College of West Africa United Methodist School System.
 I am deeply passionate about data science and astronomy because I enjoy discovering how data can solve problems and exploring the universe.
 I am also a strong advocate for children’s rights, working to ensure every child grows up safe and happy.
 </p>
