--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-<meta name="description" content="Sadayah Isaac Davis - Scientist, Quizzer, and Advocate for children's rights in Liberia.">
+<meta namegoogle-site-verification: google25dbec427172d6a1.html
+" content="Sadayah Isaac Davis - Scientist, Quizzer, and Advocate for children's rights in Liberia.">
 <meta name="keywords" content="Sadayah, Isaac Davis, Liberia, Science, Astronomy, Quizzer, Liberian Astronomical Society">
 <meta name="author" content="Sadayah Isaac Davis">
 <meta name="robots" content="index, follow">
@@ -13,233 +14,233 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans&display=swap');
 
-  * {
-    box-sizing: border-box;
-  }
+* {
+box-sizing: border-box;
+}
 
-  body {
-    margin: 0;
-    font-family: 'Open Sans', sans-serif;
-    background:;#bff
-    color: #002868;
-    min-height: 100vh;
-  }
+body {
+margin: 0;
+font-family: 'Open Sans', sans-serif;
+background:;#bff
+color: #002868;
+min-height: 100vh;
+}
 
-  /* Background subtle stars pattern */
-  body::before {
-    content: "";
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-image: radial-gradient(circle at 10% 20%, #8c0f0a30 1px, transparent 2px),
-    radial-gradient(circle at 50% 80%, #bf4a30 1px, transparent 2px),
-    radial-gradient(circle at 70% 30%, #bf0a30 1px, transparent 2px);
-    background-repeat: repeat;
-    background-size: 50px 50px;
-    opacity: 0.05;
-    z-index: 0;
-    pointer-events: none;
-  }
+/* Background subtle stars pattern */
+body::before {
+content: "";
+position: fixed;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+background-image: radial-gradient(circle at 10% 20%, #8c0f0a30 1px, transparent 2px),
+radial-gradient(circle at 50% 80%, #bf4a30 1px, transparent 2px),
+radial-gradient(circle at 70% 30%, #bf0a30 1px, transparent 2px);
+background-repeat: repeat;
+background-size: 50px 50px;
+opacity: 0.05;
+z-index: 0;
+pointer-events: none;
+}
 
-  nav {
-    background-color: #bf0a30;
-    padding: 1rem 2rem;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    display: flex;
-    justify-content: center;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  }
+nav {
+background-color: #bf0a30;
+padding: 1rem 2rem;
+position: sticky;
+top: 0;
+z-index: 1000;
+display: flex;
+justify-content: center;
+box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
 
-  nav a {
-    color: yellow;
-    text-decoration: none;
-    margin: 0 1.5rem;
-    font-weight: 700;
-    font-family: 'Merriweather', serif;
-    font-size: 1.1rem;
-    letter-spacing: 1.1px;
-    transition: color 0.3s ease;
-  }
+nav a {
+color: yellow;
+text-decoration: none;
+margin: 0 1.5rem;
+font-weight: 700;
+font-family: 'Merriweather', serif;
+font-size: 1.1rem;
+letter-spacing: 1.1px;
+transition: color 0.3s ease;
+}
 
-  nav a:hover,
-  nav a:focus {
-    color: #f0f0f0;
-    text-decoration: underline;
-  }
+nav a:hover,
+nav a:focus {
+color: #f0f0f0;
+text-decoration: underline;
+}
 
-  main {
-    max-width: 900px;
-    margin: 4rem auto 3rem;
-    padding: 0 1rem;
-    position: relative;
-    z-index: 1;
-  }
+main {
+max-width: 900px;
+margin: 4rem auto 3rem;
+padding: 0 1rem;
+position: relative;
+z-index: 1;
+}
 
-  .hero {
-    display: flex;
-    gap: 3rem;
-    align-items: center;
-    flex-wrap: wrap;
-  }
+.hero {
+display: flex;
+gap: 3rem;
+align-items: center;
+flex-wrap: wrap;
+}
 
-  .hero-text {
-    flex: 1 1 300px;
-  }
+.hero-text {
+flex: 1 1 300px;
+}
 
-  .hero-text h1 {
-    font-family: 'Merriweather', serif;
-    font-size: 3.5rem;
-    margin-bottom: 0.2rem;
-    color: #002868;
-    letter-spacing: 0.05em;
-  }
+.hero-text h1 {
+font-family: 'Merriweather', serif;
+font-size: 3.5rem;
+margin-bottom: 0.2rem;
+color: #002868;
+letter-spacing: 0.05em;
+}
 
-  .hero-text p {
-    font-size: 1.3rem;
-    color: #bf0a30;
-    font-weight: 600;
-  }
+.hero-text p {
+font-size: 1.3rem;
+color: #bf0a30;
+font-weight: 600;
+}
 
-  .hero-image {
-    flex: 1 1 300px;
-  }
+.hero-image {
+flex: 1 1 300px;
+}
 
-  .hero-image img {
-    width: 100%;
-    height: auto;
-    border-radius: 12px;
-    box-shadow: 0 8px 20px rgba(191, 10, 48, 0.4);
-    object-fit: cover;
-    border: 4px solid #002868;
-  }
+.hero-image img {
+width: 100%;
+height: auto;
+border-radius: 12px;
+box-shadow: 0 8px 20px rgba(191, 10, 48, 0.4);
+object-fit: cover;
+border: 4px solid #002868;
+}
 
-  section {
-    background: white;
-    border-radius: 12px;
-    box-shadow: 0 6px 18px rgba(0, 40, 104, 0.1);
-    padding: 2.5rem 3rem;
-    margin-top: 3rem;
-  }
+section {
+background: white;
+border-radius: 12px;
+box-shadow: 0 6px 18px rgba(0, 40, 104, 0.1);
+padding: 2.5rem 3rem;
+margin-top: 3rem;
+}
 
-  section h2 {
-    font-family: 'Merriweather', serif;
-    font-size: 2rem;
-    color: #002868;
-    margin-bottom: 1rem;
-    border-bottom: 3px solid #bf0a30;
-    padding-bottom: 0.3rem;
-    width: fit-content;
-  }
+section h2 {
+font-family: 'Merriweather', serif;
+font-size: 2rem;
+color: #002868;
+margin-bottom: 1rem;
+border-bottom: 3px solid #bf0a30;
+padding-bottom: 0.3rem;
+width: fit-content;
+}
 
-  section p {
-    font-size: 1.1rem;
-    color: #444;
-    line-height: 1.6;
-  }
+section p {
+font-size: 1.1rem;
+color: #444;
+line-height: 1.6;
+}
 
-  .contact-info strong {
-    color: #bf0a30;
-  }
+.contact-info strong {
+color: #bf0a30;
+}
 
-  form {
-    margin-top: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
+form {
+margin-top: 1.5rem;
+display: flex;
+flex-direction: column;
+gap: 1rem;
+}
 
-  input, textarea {
-    padding: 0.8rem 1rem;
-    font-size: 1rem;
-    border: 2px solid #002868;
-    border-radius: 8px;
-    font-family: 'Open Sans', sans-serif;
-    transition: border-color 0.3s ease;
-  }
+input, textarea {
+padding: 0.8rem 1rem;
+font-size: 1rem;
+border: 2px solid #002868;
+border-radius: 8px;
+font-family: 'Open Sans', sans-serif;
+transition: border-color 0.3s ease;
+}
 
-  input:focus, textarea:focus {
-    outline: none;
-    border-color: #bf0a30;
-    box-shadow: 0 0 8px rgba(191, 10, 48, 0.5);
-  }
+input:focus, textarea:focus {
+outline: none;
+border-color: #bf0a30;
+box-shadow: 0 0 8px rgba(191, 10, 48, 0.5);
+}
 
-  button {
-    background-color: #bf0a30;
-    border: none;
-    padding: 1rem;
-    font-weight: 700;
-    font-family: 'Merriweather', serif;
-    color: white;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 1.2rem;
-    transition: background-color 0.3s ease;
-  }
+button {
+background-color: #bf0a30;
+border: none;
+padding: 1rem;
+font-weight: 700;
+font-family: 'Merriweather', serif;
+color: white;
+border-radius: 10px;
+cursor: pointer;
+font-size: 1.2rem;
+transition: background-color 0.3s ease;
+}
 
-  button:hover,
-  button:focus {
-    background-color: #8c0723;
-  }
+button:hover,
+button:focus {
+background-color: #8c0723;
+}
 
-  .social-links {
-    margin-top: 1.5rem;
-  }
+.social-links {
+margin-top: 1.5rem;
+}
 
-  .social-links a {
-    display: inline-block;
-    color: #002868;
-    font-size: 1.8rem;
-    margin-right: 1rem;
-    transition: transform 0.3s, color 0.3s;
-  }
+.social-links a {
+display: inline-block;
+color: #002868;
+font-size: 1.8rem;
+margin-right: 1rem;
+transition: transform 0.3s, color 0.3s;
+}
 
-  .social-links a:hover {
-    color: #bf0a30;
-    transform: scale(1.1);
-  }
+.social-links a:hover {
+color: #bf0a30;
+transform: scale(1.1);
+}
 
-  footer {
-    text-align: center;
-    padding: 1rem;
-    background: #002868;
-    color: white;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 0.9rem;
-    margin-top: 2rem;
-  }
+footer {
+text-align: center;
+padding: 1rem;
+background: #002868;
+color: white;
+font-family: 'Open Sans', sans-serif;
+font-size: 0.9rem;
+margin-top: 2rem;
+}
 
-  footer .social-links a {
-    color: white;
-    margin: 0 0.5rem;
-    font-size: 1.5rem;
-  }
+footer .social-links a {
+color: white;
+margin: 0 0.5rem;
+font-size: 1.5rem;
+}
 
-  footer .social-links a:hover {
-    color: #ffcc00;
-  }
+footer .social-links a:hover {
+color: #ffcc00;
+}
 
-  /* Responsive */
-  @media (max-width: 768px) {
-    .hero {
-      flex-direction: column-reverse;
-      text-align: center;
-      margin-bottom: 1rem;
-    }
+/* Responsive */
+@media (max-width: 768px) {
+.hero {
+flex-direction: column-reverse;
+text-align: center;
+margin-bottom: 1rem;
+}
 
-    .hero-text h1 {
-      font-size: 2rem;
-    }
+.hero-text h1 {
+font-size: 2rem;
+}
 
-    .hero-text p {
-      font-size: 1.1rem;
-    }
-  }
+.hero-text p {
+font-size: 1.1rem;
+}
+}
 </style>
 </head>
 
