--- a/index.html
+++ b/index.html
@@ -1,311 +1,222 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-<meta namegoogle-site-verification: google25dbec427172d6a1.html
-" content="Sadayah Isaac Davis - Scientist, Quizzer, and Advocate for children's rights in Liberia.">
-<meta name="keywords" content="Sadayah, Isaac Davis, Liberia, Science, Astronomy, Quizzer, Liberian Astronomical Society">
-<meta name="author" content="Sadayah Isaac Davis">
-<meta name="robots" content="index, follow">
-
-<title>Sadayah Isaac Davis Official Website</title>
-
-<!-- Font Awesome for social icons -->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sadayah Isaac Davis</title>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans&display=swap');
+/* Global */
+* { box-sizing:border-box; margin:0; padding:0; }
+body { font-family:'Open Sans', sans-serif; background:#fdfdfd; color:#002868; line-height:1.6; }
+a { text-decoration:none; color:#002868; }
+a:hover { color:#bf0a30; transition:0.3s; }
 
-* {
-box-sizing: border-box;
-}
+/* Navigation */
+nav { display:flex; justify-content:center; background:#002868; padding:1rem; position:sticky; top:0; z-index:1000; border-bottom:2px solid #bf0a30; }
+nav a { color:white; margin:0 1.5rem; font-family:'Merriweather', serif; font-weight:700; font-size:1rem; }
+nav a:hover { color:#ffcc00; }
 
-body {
-margin: 0;
-font-family: 'Open Sans', sans-serif;
-background:;#bff
-color: #002868;
-min-height: 100vh;
-}
-
-/* Background subtle stars pattern */
-body::before {
-content: "";
-position: fixed;
-top: 0;
-left: 0;
-right: 0;
-bottom: 0;
-background-image: radial-gradient(circle at 10% 20%, #8c0f0a30 1px, transparent 2px),
-radial-gradient(circle at 50% 80%, #bf4a30 1px, transparent 2px),
-radial-gradient(circle at 70% 30%, #bf0a30 1px, transparent 2px);
-background-repeat: repeat;
-background-size: 50px 50px;
-opacity: 0.05;
-z-index: 0;
-pointer-events: none;
-}
-
-nav {
-background-color: #bf0a30;
-padding: 1rem 2rem;
-position: sticky;
-top: 0;
-z-index: 1000;
-display: flex;
-justify-content: center;
-box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-}
-
-nav a {
-color: yellow;
-text-decoration: none;
-margin: 0 1.5rem;
-font-weight: 700;
-font-family: 'Merriweather', serif;
-font-size: 1.1rem;
-letter-spacing: 1.1px;
-transition: color 0.3s ease;
-}
-
-nav a:hover,
-nav a:focus {
-color: #f0f0f0;
-text-decoration: underline;
-}
-
-main {
-max-width: 900px;
-margin: 4rem auto 3rem;
-padding: 0 1rem;
-position: relative;
-z-index: 1;
-}
-
+/* Hero Section */
 .hero {
-display: flex;
-gap: 3rem;
-align-items: center;
-flex-wrap: wrap;
+  position: relative;
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:space-between;
+  align-items:center;
+  background:white;
+  border-radius:12px;
+  box-shadow:0 6px 15px rgba(0,0,0,0.05);
+  padding:3rem 5%;
+  margin:3rem 0;
+  overflow:hidden;
 }
 
-.hero-text {
-flex: 1 1 300px;
+.hero-bg {
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background: radial-gradient(white 1px, transparent 1px);
+  background-size: 20px 20px;
+  z-index:0;
+  animation: moveStars 15s linear infinite;
+  opacity:0.05;
+}
+
+@keyframes moveStars {
+  0% { background-position: 0 0; }
+  100% { background-position: 1000px 1000px; }
+}
+
+.hero-text, .hero-image {
+  position: relative;
+  z-index:1; 
+  opacity:0;
+  transform: translateY(20px);
+  transition: opacity 1s ease-out, transform 1s ease-out;
+}
+
+.hero-text.visible, .hero-image.visible {
+  opacity:1;
+  transform: translateY(0);
 }
 
 .hero-text h1 {
-font-family: 'Merriweather', serif;
-font-size: 3.5rem;
-margin-bottom: 0.2rem;
-color: #002868;
-letter-spacing: 0.05em;
+  font-family:'Merriweather', serif;
+  font-size:3rem;
+  margin-bottom:1rem;
 }
 
 .hero-text p {
-font-size: 1.3rem;
-color: #bf0a30;
-font-weight: 600;
-}
-
-.hero-image {
-flex: 1 1 300px;
+  font-size:1.3rem;
+  color:#bf0a30;
+  font-weight:600;
 }
 
 .hero-image img {
-width: 100%;
-height: auto;
-border-radius: 12px;
-box-shadow: 0 8px 20px rgba(191, 10, 48, 0.4);
-object-fit: cover;
-border: 4px solid #002868;
+  width:250px;
+  border-radius:12px;
+  border:2px solid #002868;
+  transition:transform 0.3s;
+}
+.hero-image img:hover {
+  transform: scale(1.05);
 }
 
-section {
-background: white;
-border-radius: 12px;
-box-shadow: 0 6px 18px rgba(0, 40, 104, 0.1);
-padding: 2.5rem 3rem;
-margin-top: 3rem;
-}
+/* Sections */
+section { background:white; border-radius:12px; box-shadow:0 6px 15px rgba(0,0,0,0.05); padding:3rem 5%; margin:2rem 0; }
+section h2 { font-family:'Merriweather', serif; font-size:2rem; border-bottom:3px solid #bf0a30; display:inline-block; margin-bottom:1rem; padding-bottom:0.2rem; }
+section h3 { font-family:'Merriweather', serif; font-size:1.4rem; margin-top:1.5rem; margin-bottom:0.5rem; color:#002868; }
+section p { font-size:1.1rem; color:#444; line-height:1.6; }
 
-section h2 {
-font-family: 'Merriweather', serif;
-font-size: 2rem;
-color: #002868;
-margin-bottom: 1rem;
-border-bottom: 3px solid #bf0a30;
-padding-bottom: 0.3rem;
-width: fit-content;
-}
+/* Achievements & Outreach Cards */
+.achievements { display:flex; flex-wrap:wrap; gap:1rem; margin-top:1rem; }
+.card { flex:1 1 220px; background:#f9f9f9; border-left:4px solid #bf0a30; border-radius:8px; padding:1rem; box-shadow:0 3px 8px rgba(0,0,0,0.05); transition: transform 0.3s; opacity:0; transform: translateY(20px); }
+.card:hover { transform: translateY(-5px); }
+.card.visible { opacity:1; transform:translateY(0); transition: opacity 0.8s ease-out, transform 0.8s ease-out; }
 
-section p {
-font-size: 1.1rem;
-color: #444;
-line-height: 1.6;
-}
+/* Contact */
+.contact-info strong { color:#bf0a30; }
+form { margin-top:1rem; display:flex; flex-direction:column; gap:1rem; }
+input, textarea { padding:0.8rem; border:1px solid #ccc; border-radius:6px; }
+input:focus, textarea:focus { outline:none; border-color:#bf0a30; }
+button { background:#bf0a30; color:white; border:none; padding:1rem; font-weight:700; border-radius:8px; cursor:pointer; transition:0.3s; }
+button:hover { background:#8c0723; }
 
-.contact-info strong {
-color: #bf0a30;
-}
-
-form {
-margin-top: 1.5rem;
-display: flex;
-flex-direction: column;
-gap: 1rem;
-}
-
-input, textarea {
-padding: 0.8rem 1rem;
-font-size: 1rem;
-border: 2px solid #002868;
-border-radius: 8px;
-font-family: 'Open Sans', sans-serif;
-transition: border-color 0.3s ease;
-}
-
-input:focus, textarea:focus {
-outline: none;
-border-color: #bf0a30;
-box-shadow: 0 0 8px rgba(191, 10, 48, 0.5);
-}
-
-button {
-background-color: #bf0a30;
-border: none;
-padding: 1rem;
-font-weight: 700;
-font-family: 'Merriweather', serif;
-color: white;
-border-radius: 10px;
-cursor: pointer;
-font-size: 1.2rem;
-transition: background-color 0.3s ease;
-}
-
-button:hover,
-button:focus {
-background-color: #8c0723;
-}
-
-.social-links {
-margin-top: 1.5rem;
-}
-
-.social-links a {
-display: inline-block;
-color: #002868;
-font-size: 1.8rem;
-margin-right: 1rem;
-transition: transform 0.3s, color 0.3s;
-}
-
-.social-links a:hover {
-color: #bf0a30;
-transform: scale(1.1);
-}
-
-footer {
-text-align: center;
-padding: 1rem;
-background: #002868;
-color: white;
-font-family: 'Open Sans', sans-serif;
-font-size: 0.9rem;
-margin-top: 2rem;
-}
-
-footer .social-links a {
-color: white;
-margin: 0 0.5rem;
-font-size: 1.5rem;
-}
-
-footer .social-links a:hover {
-color: #ffcc00;
-}
+/* Footer */
+footer { text-align:center; padding:2rem 1rem; background:#002868; color:white; margin-top:2rem; border-top:2px solid #bf0a30; }
+footer .social-links a { color:white; margin:0 0.5rem; font-size:1.5rem; }
+footer .social-links a:hover { color:#ffcc00; }
 
 /* Responsive */
-@media (max-width: 768px) {
-.hero {
-flex-direction: column-reverse;
-text-align: center;
-margin-bottom: 1rem;
-}
-
-.hero-text h1 {
-font-size: 2rem;
-}
-
-.hero-text p {
-font-size: 1.1rem;
-}
+@media(max-width:768px){
+  .hero { flex-direction:column; text-align:center; }
+  .hero-image img { margin-top:1rem; }
+  .hero-text h1 { font-size:2.2rem; }
+  .achievements { flex-direction:column; }
 }
 </style>
 </head>
-
 <body>
+
+<!-- Navigation -->
 <nav>
-<a href="#home">Home</a>
-<a href="#about">About</a>
-<a href="#contact">Contact</a>
+  <a href="#home">Home</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
 </nav>
 
-<main>
-<section class="hero" id="home">
-<div class="hero-text">
-<h1>Sadayah Isaac Davis</h1>
-<p>
-The Handsome Scientist
-</p>
+<!-- Hero Section -->
+<div class="hero" id="home">
+  <div class="hero-bg"></div>
+  <div class="hero-text">
+    <h1>Sadayah Isaac Davis</h1>
+    <p>The Handsome Scientist</p>
+  </div>
+  <div class="hero-image">
+    <img src="gaba.jpg" alt="Sadayah Isaac Davis">
+  </div>
 </div>
-<div class="hero-image">
-<img src="gaba.jpg" alt="Sadayah Isaac Davis">
-</div>
-</section>
 
+<!-- About Section -->
 <section id="about">
-<h2>About Me</h2>
-<p>
-🏆 <strong>Best Science Quizzer Liberia 2024</strong><br>
-🥇 <strong>Winner of School Profile Liberia General Science Quiz Bowl 2024</strong><br>
-🎓 <strong>Award Recipient of Educate the Next Generation (ETN) 2024</strong><br>
-🌌 <strong>Co-Founder of the Liberian Astronomical Society</strong><br><br>
-Hello! I am Sadayah Isaac Davis, a student and lifelong learner from Liberia. I graduated from the College of West Africa United Methodist School System.
-I am deeply passionate about data science and astronomy because I enjoy discovering how data can solve problems and exploring the universe.
-I am also a strong advocate for children’s rights, working to ensure every child grows up safe and happy.
-</p>
+  <h2>About Me</h2>
+
+  <p>Hello! I am <strong>Sadayah Isaac Davis</strong>, a passionate scientist, quizzer, and advocate for youth and children’s rights based in Liberia. From a young age, I have been fascinated by the mysteries of the universe and the power of knowledge to transform lives. I graduated from the College of West Africa United Methodist School System, where I developed a strong foundation in science and problem-solving.</p>
+
+  <h3>🏆 Achievements</h3>
+  <div class="achievements">
+    <div class="card fade-up">🏆 <strong>Best Science Quizzer Liberia 2024</strong></div>
+    <div class="card fade-up">🥇 <strong>Winner of School Profile Liberia General Science Quiz Bowl 2024</strong></div>
+    <div class="card fade-up">🎓 <strong>Award Recipient of Educate the Next Generation (ETN) 2024</strong></div>
+  </div>
+
+  <h3>🌌 Astronomy Outreach</h3>
+  <p>As a co-founder of the <strong>Liberian Astronomical Society</strong>, I work to make space science accessible and engaging for young people. Through workshops, observation nights, and public lectures, I inspire youth to explore astronomy, STEM fields, and the wonders of the universe. My goal is to ignite curiosity and help the next generation of Liberian scientists and innovators dream big.</p>
+
+  <div class="achievements">
+    <div class="card fade-up">🌌 <strong>Co-Founder of the Liberian Astronomical Society</strong></div>
+    <div class="card fade-up">🔭 Conduct astronomy workshops and observation nights for youth</div>
+  </div>
+
+  <h3>💡 Advocacy for Children’s Rights</h3>
+  <p>I am a dedicated advocate for children’s rights, working to ensure every child grows up in a safe, supportive, and nurturing environment. I participate in programs that improve access to quality education and create opportunities for children across Liberia. My mission is to empower youth to learn, explore, and reach their full potential.</p>
+
+  <div class="achievements">
+    <div class="card fade-up">💡 Advocate for children’s rights, empowering youth to learn and explore STEM</div>
+  </div>
+
+  <h3>🌟 Personal Mission</h3>
+  <p>I am committed to bridging the gap between scientific knowledge and community development. By leveraging my expertise in science, data, and astronomy, I aim to contribute to Liberia’s growth and the development of young minds. My work is driven by a desire to inspire others to dream big, explore the unknown, and believe in their potential to make a difference.</p>
+
+  <p>When I am not conducting outreach or studying the stars, I enjoy exploring new ideas, solving challenging problems, and learning about emerging technologies and scientific discoveries. I am a lifelong learner, a passionate advocate, and an ambitious visionary committed to creating opportunities, inspiring change, and making science and education accessible to all.</p>
 </section>
 
+<!-- Contact Section -->
 <section id="contact">
-<h2>Contact Me</h2>
-<p class="contact-info">
-📧 Email: <strong>sadayahdavis6@gmail.com</strong>
-</p>
-<p class="contact-info">
-📱 Phone: <strong>+231 772040790 / +231 888368350</strong>
-</p>
-
-<div class="social-links">
-<a href="https://facebook.com/YOUR_FACEBOOK_USERNAME" target="_blank"><i class="fab fa-facebook"></i></a>
-<a href="https://instagram.com/YOUR_INSTAGRAM_USERNAME" target="_blank"><i class="fab fa-instagram"></i></a>
-</div>
-
-<form action="mailto:sadayahdavis6@gmail.com" method="POST" enctype="text/plain">
-<input type="text" name="name" placeholder="Your Name" required />
-<input type="email" name="email" placeholder="Your Email" required />
-<textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-<button type="submit">Send Message</button>
-</form>
+  <h2>Contact Me</h2>
+  <p class="contact-info">📧 Email: <strong>sadayahdavis6@gmail.com</strong></p>
+  <p class="contact-info">📱 Phone: <strong>+231 772040790 / +231 888368350</strong></p>
+  <form action="mailto:sadayahdavis6@gmail.com" method="POST" enctype="text/plain">
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+    <button type="submit">Send Message</button>
+  </form>
 </section>
-</main>
 
-<footer
-<div class="social-links">
-<a href="https://facebook.com/https://www.facebook.com/sadayah.isaac" target="_blank"><i class="fab fa-facebook"></i></a>
-<a href="https://instagram.comhttps://www.instagram.com/sadayahdavis?igsh=aTB2Z3g5ZHMwMW9s" target="_blank"><i class="fab fa-instagram"></i></a>
-</div>
-© 2024 Sadayah Isaac Davis — All rights reserved.
+<!-- Footer -->
+<footer>
+  <div class="social-links">
+    <a href="https://facebook.com/sadayah.isaac" target="_blank"><i class="fab fa-facebook"></i></a>
+    <a href="https://www.instagram.com/sadayahisaac.davis?igsh=b213ejhsYXdvbGV5" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://wa.me/231772040790" target="_blank"><i class="fab fa-whatsapp"></i></a>
+  </div>
+  © 2024 Sadayah Isaac Davis — All rights reserved.
 </footer>
+
+<script>
+// Hero fade-in
+document.addEventListener("DOMContentLoaded", function() {
+  document.querySelectorAll(".hero-text, .hero-image").forEach(el => el.classList.add("visible"));
+
+  // Cards fade-up on scroll
+  const faders = document.querySelectorAll(".fade-up, .card");
+  const appearOptions = { threshold: 0.2, rootMargin: "0px 0px -50px 0px" };
+  const appearOnScroll = new IntersectionObserver(function(entries, observer) {
+    entries.forEach(entry => {
+      if (!entry.isIntersecting) return;
+      entry.target.classList.add("visible");
+      observer.unobserve(entry.target);
+    });
+  }, appearOptions);
+
+  faders.forEach(fader => appearOnScroll.observe(fader));
+});
+</script>
+
 </body>
 </html>
